fix table's bugs,add dark mode's styles

--- a/src/styles/mode.scss
+++ b/src/styles/mode.scss
@@ -31,6 +31,8 @@
   --sidebar-font: rgba(0, 151, 167, 0.41);
   --sidebar-selected: #0097a7;
   --table-header: #0097a7;
+  --collapse-table-header: #0097a7;
+
   --table-header-font: #ffffff;
   --table-header-secondary: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #009688;
   --ceil: #ffffff;
@@ -42,6 +44,10 @@
   --icon-secondary: #0097a7;
   --sidebar-line: #d6d6d6;
   --table-border: #e9e9e9;
+  --collapse-table-border: #e9e9e9;
+  --collapse-table-background: rgba(255, 255, 255, 0.7);
+
+  --collapse-table-shadow: 0px 2px 25px 2px rgba(0, 0, 0, 0.12);
   --table-padding: 0;
   --disable: #4c5853;
   --select-option: #faffff;
@@ -70,6 +76,9 @@
   --option-shadow: 0px 2px 25px 2px rgba(0, 0, 0, 0.12);
   --tab-selected-border: #413ac7;
   --tab-selected: #4c4b53;
+  --order-table-collapsed: rgba(56, 56, 56, 0.2);
+  --paper: #ffffff;
+  --icon-selected: #605d7b;
 }
 
 [data-theme='dark'] {
@@ -103,6 +112,8 @@
   --sidebar-font: #ffffff;
   --sidebar-selected: #413ac7;
   --table-header: rgba(56, 56, 56, 0.16);
+  --collapse-table-header: #101010;
+
   --table-header-font: #9a99a6;
   --table-header-secondary: rgba(56, 56, 56, 0.16);
   --ceil: rgba(56, 56, 56, 0.16);
@@ -116,10 +127,13 @@
   --icon-secondary: #ffffff;
   --sidebar-line: #29292e;
   --table-border: #383838;
+  --collapse-table-border: #29292e;
   --table-padding: 24px;
   --disable: #4c5853;
   --select-option: linear-gradient(0deg, rgba(12, 0, 29, 0.02), rgba(12, 0, 29, 0.02)),
     rgba(26, 24, 24, 0.9);
+  --collapse-table-shadow: rgba(56, 56, 56, 0.16);
+  --collapse-table-background: #101010;
   --select-hover: rgba(245, 245, 245, 0.1);
   --select-background: rgba(56, 56, 56, 0.2);
   --popup-background: rgba(0, 0, 0, 0.65);
@@ -146,4 +160,7 @@
   --option-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --tab-selected-border: #413ac7;
   --tab-selected: #ffffff;
+  --order-table-collapsed: #181818;
+  --paper: #101010;
+  --icon-selected: #ffffff;
 }
